--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body { 
-    background: url(Assets/Space\ Diagram.svg) no-repeat center fixed; 
+    background: url(Assets/vegetable-fruit-background.jpg) no-repeat center fixed; 
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
@@ -7,14 +7,12 @@ body {
     height: 100%;
   }
   
+#logo {
+  height: 68px;
+  margin-top: -2px;
+  margin-left: 5px;
+}
 
-
-h1 {
-    text-align: center;
-    font-family: 'Space Mono', monospace;
-    margin: 0;
-    padding-bottom: 5px;
-    background: transparent;
-    color:turquoise;
-    font-size: 53px;
+#currentLocation {
+  color: black;
 }
