--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body { 
-    background: url(Assets/background-green.jpg) no-repeat center fixed; 
+    background: url(Assets/plain-gradient.jpg) no-repeat center fixed; 
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
@@ -18,6 +18,21 @@ body {
   margin-top: 5px;
 }
 
+#carousel-space {
+  padding: 5px;
+  padding-left: 376px;
+  padding-right: 128px;
+}
+
+a {
+  color: black;
+  font-family: 'Pragati Narrow', sans-serif;
+  line-height: 1.0;
+}
+
+.gmap {
+  vertical-align: middle;
+}
 
 /* Mobile */
 @media only screen and (max-width: 767px) {
@@ -33,6 +48,12 @@ body {
   display: block;
   margin-top: 10px;
 }
+
+#logo {
+  height: 53px;
+  margin-top: 1px;
+  margin-left: 5px;
+}
   
 }
 
@@ -44,6 +65,9 @@ body {
 
 #desktop {
   display: block;
+  border: 2px solid gray;
+  border-radius: 5px;
+  background-color: white;
 }
 
 #logo {
@@ -63,12 +87,30 @@ body {
 
 #desktop {
   width: 80%;
-  margin-left: 142px;
-  margin-top: 52px;
+  margin-left: 150px;
+  margin-top: 40px;
   height: 80vh;
 }
 
 .restaurantInfo {
-  font-size: 20px;
+  font-size: 36px;
   text-align: center;
+}
+
+#styleName {
+font-weight: bold;
+font-size: 60px;
+}
+
+#styleAddress {
+color: gray;
+}
+
+#styleWeb {
+  text-transform: none;
+  border: 1px solid black;
+}
+
+#mapStyle {
+  margin-top: 16px;
 }
