--- a/style.css
+++ b/style.css
@@ -1,12 +1,12 @@
 body { 
-    background: url(Assets/plain-gradient.jpg) no-repeat center fixed; 
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover;
-    height: 100%;
-  }
-  
+  background: url(Assets/gradien-with-food-choices.jpg) no-repeat center fixed; 
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+  height: 100%;
+}
+
 #logo {
   height: 58px;
   margin-top: 3px;
@@ -16,6 +16,14 @@ body {
 #currentLocationbtn, #currentLocationbtnMobile {
   color: black;
   margin-top: 5px;
+}
+
+#calorieCounter {
+  color: black;
+  margin-bottom: 2px;
+  margin-left: 3px;
+  margin-right: 3px;
+  margin-top: 0px;
 }
 
 #carousel-space {
@@ -34,9 +42,17 @@ a {
   vertical-align: middle;
 }
 
+.modalBtnStyle {
+  font-size: 20px;
+  margin-top: 43px;
+  margin-bottom: 43px;
+  margin-left: 145px !important;
+  background-color: rgb(37, 65, 37);
+}
+
 /* Mobile */
 @media only screen and (max-width: 767px) {
-  #desktop {
+  #desktop-buttons {
   display: none;
   
 }
@@ -44,9 +60,17 @@ a {
   display: none;
 }
 
+
 #currentLocationbtnMobile {
   display: block;
   margin-top: 10px;
+  margin-right: 3px;
+}
+
+#ulStyling {
+  position: absolute;
+  top: 0;
+  right: 0;
 }
 
 #logo {
@@ -83,6 +107,15 @@ a {
   margin-top: 14px;
 }
 
+#calorieCounterMob {
+  display: none;
+}
+
+#calorieCounter {
+  margin-right: 13px;
+  margin-top: -2px;
+}
+
 }
 
 #desktop {
@@ -99,18 +132,55 @@ a {
 
 #styleName {
 font-weight: bold;
-font-size: 60px;
+font-size: 70px;
+text-align: center;
+margin-bottom: -13px;
 }
 
 #styleAddress {
 color: gray;
+text-align: center;
+margin-bottom: 15px;
 }
 
 #styleWeb {
   text-transform: none;
   border: 1px solid black;
+  margin-left: 280px;
+  padding: 5px;
+  border-radius: 5px;
 }
 
 #mapStyle {
   margin-top: 16px;
+  margin-left: 38px;
+  border: 1px solid black !important;
+  margin-bottom: -10px;
+}
+
+.modal-content {
+  padding-top: 2px !important;
+}
+
+.collapsible {
+  margin: 10px;
+}
+
+.collapsible-body {
+  padding: 1px;
+}
+
+#collRestAdd {
+  color: gray;
+  font-size: 18px;
+}
+
+#collRestWeb {
+  text-transform: none;
+  border: 1px solid black;
+  margin-bottom: 6px;
+}
+
+#collRestName {
+  font-size: 25px;
 }
